; ModuleID = '/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-fsl-ftm-alarm.c_ftm_rtc_alarm_interrupt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-fsl-ftm-alarm.c_ftm_rtc_alarm_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ftm_rtc = type { i32 }

@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @ftm_rtc_alarm_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ftm_rtc_alarm_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ftm_rtc*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.ftm_rtc*
  store %struct.ftm_rtc* %7, %struct.ftm_rtc** %5, align 8
  %8 = load %struct.ftm_rtc*, %struct.ftm_rtc** %5, align 8
  %9 = call i32 @ftm_irq_acknowledge(%struct.ftm_rtc* %8)
  %10 = load %struct.ftm_rtc*, %struct.ftm_rtc** %5, align 8
  %11 = call i32 @ftm_irq_disable(%struct.ftm_rtc* %10)
  %12 = load %struct.ftm_rtc*, %struct.ftm_rtc** %5, align 8
  %13 = call i32 @ftm_clean_alarm(%struct.ftm_rtc* %12)
  %14 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %14
}

declare dso_local i32 @ftm_irq_acknowledge(%struct.ftm_rtc*) #1

declare dso_local i32 @ftm_irq_disable(%struct.ftm_rtc*) #1

declare dso_local i32 @ftm_clean_alarm(%struct.ftm_rtc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
